// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a basic table table 1`] = `
<div
  className="dataTable"
>
  <div
    className="tableContainer"
    style={
      Object {
        "height": undefined,
      }
    }
  >
    <table>
      <thead
        className=""
      >
        <tr>
          <th
            colSpan={1}
          >
            <div>
              name
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              house
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              region
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              sigil
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              isAlive
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Eddard
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Catelyn
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Jon Snow
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rickon
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Cercei
          </td>
          <td>
            Lannister
          </td>
          <td>
            Westerlands
          </td>
          <td>
            Golden Lion
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Sansa
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Arya
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Bran
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Joffrey
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Myrcella
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Tommen
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders a table table with manual pagination 1`] = `
<div
  className="dataTable"
>
  <div
    className="tableContainer"
    style={
      Object {
        "height": undefined,
      }
    }
  >
    <table>
      <thead
        className=""
      >
        <tr>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              name
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              house
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              region
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              sigil
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              isAlive
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Eddard
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Catelyn
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Jon Snow
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rickon
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Cercei
          </td>
          <td>
            Lannister
          </td>
          <td>
            Westerlands
          </td>
          <td>
            Golden Lion
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Sansa
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Arya
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Bran
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Joffrey
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Myrcella
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Tommen
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="footerContainer"
  >
    <span>
      Showing 1-NaN of undefined items
    </span>
    <div
      className="pageNavigation"
    >
      <div
        className="pageNavigationSelect"
      >
        <div
          className="wrapper select"
          style={
            Object {
              "--formField-maxLength": undefined,
            }
          }
        >
          <div
            className="inputWrapper"
          >
            <label
              className="label"
              htmlFor="123e4567-e89b-12d3-a456-426655440005"
            />
            <select
              className="input"
              id="123e4567-e89b-12d3-a456-426655440005"
              onChange={[Function]}
              value={10}
            >
              <option
                value="10"
              >
                10
              </option>
              <option
                value="20"
              >
                20
              </option>
              <option
                value="30"
              >
                30
              </option>
              <option
                value="40"
              >
                40
              </option>
              <option
                value="50"
              >
                50
              </option>
            </select>
            <span
              className="postfix"
            >
              <svg
                className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
                data-testid="arrowDown"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  className=""
                  d="M328.998 351.11c-8.341-8.317-19.268-12.465-30.189-12.445-10.887 0.019-21.766 4.179-30.071 12.478s-12.468 19.172-12.487 30.050c-0.019 10.929 4.143 21.863 12.487 30.201l213.543 213.719c8.345 8.341 19.283 12.509 30.221 12.509s21.875-4.168 30.221-12.509l213.542-213.539c8.345-8.338 12.509-19.273 12.488-30.201-0.021-10.879-4.181-21.75-12.488-30.050-8.302-8.299-19.185-12.459-30.071-12.478-10.921-0.019-21.849 4.129-30.19 12.445l-183.501 183.158-183.502-183.338z"
                />
              </svg>
            </span>
          </div>
        </div>
        <span
          className="label"
        >
          per page
        </span>
      </div>
      <div
        className="pageNavigationButtonsContainer"
      >
        <button
          aria-label="arrowLeft"
          className="button base onlyIcon subtle secondary disabled"
          disabled={true}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="arrowLeft"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className=""
              d="M649.534 671.644c8.315 8.341 12.466 19.27 12.445 30.19-0.021 10.887-4.181 21.768-12.479 30.071-8.298 8.307-19.172 12.466-30.049 12.488-10.929 0.021-21.862-4.143-30.199-12.488l-213.722-213.542c-8.339-8.345-12.509-19.283-12.509-30.221s4.17-21.875 12.509-30.221l213.539-213.543c8.341-8.344 19.274-12.507 30.203-12.487 10.878 0.019 21.751 4.181 30.049 12.487s12.458 19.185 12.479 30.071c0.017 10.922-4.13 21.849-12.445 30.189l-183.159 183.502 183.338 183.501z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
        <button
          aria-label="arrowRight"
          className="button base onlyIcon subtle secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="arrowRight"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className=""
              d="M375.467 671.644c-8.317 8.341-12.465 19.27-12.445 30.19 0.019 10.887 4.179 21.768 12.478 30.071 8.299 8.307 19.172 12.466 30.050 12.488 10.929 0.021 21.862-4.143 30.199-12.488l213.722-213.542c8.341-8.345 12.509-19.283 12.509-30.221s-4.168-21.875-12.509-30.221l-213.538-213.543c-8.341-8.344-19.274-12.507-30.202-12.487-10.879 0.019-21.75 4.181-30.050 12.487s-12.459 19.185-12.478 30.071c-0.019 10.922 4.129 21.849 12.445 30.189l183.158 183.502-183.338 183.501z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a table table with manual sorting 1`] = `
<div
  className="dataTable"
>
  <div
    className="tableContainer"
    style={
      Object {
        "height": undefined,
      }
    }
  >
    <table>
      <thead
        className=""
      >
        <tr>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              name
              <svg
                className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC _2azt9Jt0fRUQn8YEtWXIl3"
                data-testid="longArrowUp"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  className="_1R4_alABGZICCj4KPfBOIa"
                  d="M316.649 552.206l110.435 110.435c16.677 16.677 16.677 43.721 0 60.398s-43.72 16.677-60.399 0l-183.343-183.343c-16.678-16.677-16.678-43.721 0-60.398l183.343-183.343c16.678-16.679 43.72-16.679 60.399 0s16.677 43.72 0 60.399l-110.435 110.435h494.81c23.588 0 42.709 19.121 42.709 42.709s-19.121 42.709-42.709 42.709h-494.81z"
                />
              </svg>
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              house
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              region
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              sigil
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              isAlive
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Eddard
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Catelyn
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Jon Snow
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rickon
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Cercei
          </td>
          <td>
            Lannister
          </td>
          <td>
            Westerlands
          </td>
          <td>
            Golden Lion
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Sansa
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Arya
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Bran
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Joffrey
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Myrcella
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Tommen
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders a table table with pagination 1`] = `
<div
  className="dataTable"
>
  <div
    className="tableContainer"
    style={
      Object {
        "height": undefined,
      }
    }
  >
    <table>
      <thead
        className=""
      >
        <tr>
          <th
            colSpan={1}
          >
            <div>
              name
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              house
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              region
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              sigil
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              isAlive
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Eddard
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Catelyn
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Jon Snow
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rickon
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Cercei
          </td>
          <td>
            Lannister
          </td>
          <td>
            Westerlands
          </td>
          <td>
            Golden Lion
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Sansa
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Arya
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Bran
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="footerContainer"
  >
    <span>
      Showing 1-10 of 13 items
    </span>
    <div
      className="pageNavigation"
    >
      <div
        className="pageNavigationSelect"
      >
        <div
          className="wrapper select"
          style={
            Object {
              "--formField-maxLength": undefined,
            }
          }
        >
          <div
            className="inputWrapper"
          >
            <label
              className="label"
              htmlFor="123e4567-e89b-12d3-a456-426655440001"
            />
            <select
              className="input"
              id="123e4567-e89b-12d3-a456-426655440001"
              onChange={[Function]}
              value={10}
            >
              <option
                value="10"
              >
                10
              </option>
              <option
                value="20"
              >
                20
              </option>
              <option
                value="30"
              >
                30
              </option>
              <option
                value="40"
              >
                40
              </option>
              <option
                value="50"
              >
                50
              </option>
            </select>
            <span
              className="postfix"
            >
              <svg
                className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
                data-testid="arrowDown"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  className=""
                  d="M328.998 351.11c-8.341-8.317-19.268-12.465-30.189-12.445-10.887 0.019-21.766 4.179-30.071 12.478s-12.468 19.172-12.487 30.050c-0.019 10.929 4.143 21.863 12.487 30.201l213.543 213.719c8.345 8.341 19.283 12.509 30.221 12.509s21.875-4.168 30.221-12.509l213.542-213.539c8.345-8.338 12.509-19.273 12.488-30.201-0.021-10.879-4.181-21.75-12.488-30.050-8.302-8.299-19.185-12.459-30.071-12.478-10.921-0.019-21.849 4.129-30.19 12.445l-183.501 183.158-183.502-183.338z"
                />
              </svg>
            </span>
          </div>
        </div>
        <span
          className="label"
        >
          per page
        </span>
      </div>
      <div
        className="pageNavigationButtonsContainer"
      >
        <button
          aria-label="arrowLeft"
          className="button base onlyIcon subtle secondary disabled"
          disabled={true}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="arrowLeft"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className=""
              d="M649.534 671.644c8.315 8.341 12.466 19.27 12.445 30.19-0.021 10.887-4.181 21.768-12.479 30.071-8.298 8.307-19.172 12.466-30.049 12.488-10.929 0.021-21.862-4.143-30.199-12.488l-213.722-213.542c-8.339-8.345-12.509-19.283-12.509-30.221s4.17-21.875 12.509-30.221l213.539-213.543c8.341-8.344 19.274-12.507 30.203-12.487 10.878 0.019 21.751 4.181 30.049 12.487s12.458 19.185 12.479 30.071c0.017 10.922-4.13 21.849-12.445 30.189l-183.159 183.502 183.338 183.501z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
        <button
          aria-label="arrowRight"
          className="button base onlyIcon subtle secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="arrowRight"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className=""
              d="M375.467 671.644c-8.317 8.341-12.465 19.27-12.445 30.19 0.019 10.887 4.179 21.768 12.478 30.071 8.299 8.307 19.172 12.466 30.050 12.488 10.929 0.021 21.862-4.143 30.199-12.488l213.722-213.542c8.341-8.345 12.509-19.283 12.509-30.221s-4.168-21.875-12.509-30.221l-213.538-213.543c-8.341-8.344-19.274-12.507-30.202-12.487-10.879 0.019-21.75 4.181-30.050 12.487s-12.459 19.185-12.478 30.071c-0.019 10.922 4.129 21.849 12.445 30.189l183.158 183.502-183.338 183.501z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a table table with sorting enable 1`] = `
<div
  className="dataTable"
>
  <div
    className="tableContainer"
    style={
      Object {
        "height": undefined,
      }
    }
  >
    <table>
      <thead
        className=""
      >
        <tr>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              name
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              house
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              region
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              sigil
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              isAlive
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Eddard
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Catelyn
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Jon Snow
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rickon
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Cercei
          </td>
          <td>
            Lannister
          </td>
          <td>
            Westerlands
          </td>
          <td>
            Golden Lion
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Sansa
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Arya
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Bran
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Joffrey
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Myrcella
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Tommen
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
